--- a/DemoApplication/View/ProductListViewController.xib
+++ b/DemoApplication/View/ProductListViewController.xib
@@ -21,7 +21,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="9ha-kU-PGO">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="624"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="loB-3d-B4u">
                         <size key="itemSize" width="50" height="50"/>
@@ -36,7 +36,7 @@
                 <constraint firstAttribute="trailing" secondItem="9ha-kU-PGO" secondAttribute="trailing" id="clQ-Le-7M7"/>
                 <constraint firstItem="9ha-kU-PGO" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="hXX-4Y-Ev9"/>
                 <constraint firstItem="9ha-kU-PGO" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="lcD-wm-PcV"/>
-                <constraint firstAttribute="bottom" secondItem="9ha-kU-PGO" secondAttribute="bottom" id="zc8-SD-L4r"/>
+                <constraint firstAttribute="bottom" secondItem="9ha-kU-PGO" secondAttribute="bottom" constant="43" id="zc8-SD-L4r"/>
             </constraints>
             <point key="canvasLocation" x="33.5" y="54.5"/>
         </view>
