--- a/DemoApplication/View/CartListingViewController.xib
+++ b/DemoApplication/View/CartListingViewController.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CartListingViewController" customModule="DemoApplication" customModuleProvider="target">
             <connections>
+                <outlet property="lbl_TotalPrice" destination="cAZ-Jp-7dm" id="pVP-hp-NCg"/>
                 <outlet property="tbl_CartList" destination="EhW-ee-Uyt" id="vHZ-IX-VeO"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
